--- a/silasethernet/index.html
+++ b/silasethernet/index.html
@@ -1,6 +1,6 @@
 <!--
  =========================================================
- * Material Kit - v2.0.6
+ * Silas Ethernet - v2.0.6
  =========================================================
 
  * Product Page: https://www.creative-tim.com/product/material-kit
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Material Kit by Creative Tim
+    Silas Ethernet by Silas Board 
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -39,7 +39,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="https://demos.creative-tim.com/material-kit/index.html">
-          Material Kit </a>
+          Silas Ethernet </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="sr-only">Toggle navigation</span>
           <span class="navbar-toggler-icon"></span>
@@ -86,12 +86,12 @@
       </div>
     </div>
   </nav>
-  <div class="page-header header-filter clear-filter" data-parallax="true" style="background-image: url('./assets/img/carmilla-cut.png');">
+  <div class="page-header header-filter clear-filter" data-parallax="true" style="background-image: url('./assets/img/university.jpg');">
     <div class="container">
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto">
           <div class="brand">
-            <h1>Material Kit.</h1>
+            <h1>Silas Ethernet.</h1>
             <h3>A Badass Bootstrap 4 UI Kit based on Material Design.</h3>
           </div>
         </div>
@@ -535,7 +535,7 @@
       </div>
       <!--             navbar -->
       <div id="navbar">
-        <div class="navigation-example" style="background-image: url('./assets/img//bg.jpg');">
+        <div class="navigation-example" style="background-image: url('./assets/img/university.jpg');">
           <!--        rose navbar with search form -->
           <nav class="navbar navbar-expand-lg bg-rose">
             <div class="container">
@@ -1017,43 +1017,43 @@
           <div class="row">
             <div class="tim-typo">
               <h1>
-                <span class="tim-note">Header 1</span>The Life of Material Kit </h1>
+                <span class="tim-note">Header 1</span>The Life of Silas Ethernet </h1>
             </div>
             <div class="tim-typo">
               <h2>
-                <span class="tim-note">Header 2</span>The Life of Material Kit</h2>
+                <span class="tim-note">Header 2</span>The Life of Silas Ethernet</h2>
             </div>
             <div class="tim-typo">
               <h3>
-                <span class="tim-note">Header 3</span>The Life of Material Kit</h3>
+                <span class="tim-note">Header 3</span>The Life of Silas Ethernet</h3>
             </div>
             <div class="tim-typo">
               <h4>
-                <span class="tim-note">Header 4</span>The Life of Material Kit</h4>
+                <span class="tim-note">Header 4</span>The Life of Silas Ethernet</h4>
             </div>
             <div class="tim-typo">
               <h5>
-                <span class="tim-note">Header 5</span>The Life of Material Kit</h5>
+                <span class="tim-note">Header 5</span>The Life of Silas Ethernet</h5>
             </div>
             <div class="tim-typo">
               <h6>
-                <span class="tim-note">Header 6</span>The Life of Material Kit</h6>
+                <span class="tim-note">Header 6</span>The Life of Silas Ethernet</h6>
             </div>
             <div class="tim-typo">
               <h1 class="title">
-                <span class="tim-note">Header 1 Title</span>The Life of Material Kit </h1>
+                <span class="tim-note">Header 1 Title</span>The Life of Silas Ethernet </h1>
             </div>
             <div class="tim-typo">
               <h2 class="title">
-                <span class="tim-note">Header 2 Title</span>The Life of Material Kit</h2>
+                <span class="tim-note">Header 2 Title</span>The Life of Silas Ethernet</h2>
             </div>
             <div class="tim-typo">
               <h3 class="title">
-                <span class="tim-note">Header 3 Title</span>The Life of Material Kit</h3>
+                <span class="tim-note">Header 3 Title</span>The Life of Silas Ethernet</h3>
             </div>
             <div class="tim-typo">
               <h4 class="title">
-                <span class="tim-note">Header 4 Title</span>The Life of Material Kit</h4>
+                <span class="tim-note">Header 4 Title</span>The Life of Silas Ethernet</h4>
             </div>
             <div class="tim-typo">
               <p>
@@ -1368,7 +1368,7 @@
           <div class="col-md-8 ml-auto mr-auto">
             <h2>Want more?</h2>
             <h4>We've just launched
-              <a href="https://demos.creative-tim.com/material-kit-pro/presentation.html?ref=utp-mk-demos" target="_blank">Material Kit PRO</a>. It has a huge number of components, sections and example pages. Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design.</h4>
+              <a href="https://demos.creative-tim.com/material-kit-pro/presentation.html?ref=utp-mk-demos" target="_blank">Silas Ethernet PRO</a>. It has a huge number of components, sections and example pages. Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design.</h4>
           </div>
           <div class="col-sm-8 col-md-5 ml-auto mr-auto">
             <a href="https://demos.creative-tim.com/material-kit-pro/presentation.html?ref=utp-mk-demos" class="btn btn-rose btn-upgrade btn-lg" target="_blank">
@@ -1464,7 +1464,7 @@
   <script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-  <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+  <!-- Control Center for Silas Ethernet: parallax effects, scripts for the example pages etc -->
   <script src="./assets/js/material-kit.js?v=2.0.6" type="text/javascript"></script>
   <script>
     $(document).ready(function() {
