Added more links

--- a/silasethernet/index.html
+++ b/silasethernet/index.html
@@ -51,21 +51,26 @@
         <ul class="navbar-nav ml-auto">
           <li class="dropdown nav-item">
             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-              <i class="material-icons">apps</i> Components
+              Carmilla
             </a>
             <div class="dropdown-menu dropdown-with-icons">
-              <a href="./index.html" class="dropdown-item">
-                <i class="material-icons">layers</i> All Components
+              <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
+                <i class="material-icons">tv</i> Watch Carmilla
               </a>
-              <a href="https://demos.creative-tim.com/material-kit/docs/2.1/getting-started/introduction.html" class="dropdown-item">
-                <i class="material-icons">content_paste</i> Documentation
+              <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
+              	<i class="material-icons">book</i> Episode Guides
+              </a>
+              <a href="https://www.youtube.com/playlist?list=PLbvYWjKFvS5qc5wEPzwPCmCVhpxXvkHus" class="dropdown-item">
+                <i class="material-icons">people</i> Character Pages
               </a>
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
-              <i class="material-icons">cloud_download</i> Download
-            </a>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="dropdown nav-item">
+              <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                Behind The Scenes
+              </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank" data-original-title="Follow us on Twitter">
