--- a/silasethernet/index.html
+++ b/silasethernet/index.html
@@ -38,7 +38,7 @@
 <nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg bg-dark" color-on-scroll="100" id="sectionsNav">
   <div class="container">
     <div class="navbar-translate">
-      <a class="navbar-brand" href="https://demos.creative-tim.com/material-kit/index.html">
+      <a class="navbar-brand" href="index.html">
         Silas Ethernet </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
