--- a/silasethernet/morecarmilla.html
+++ b/silasethernet/morecarmilla.html
@@ -129,18 +129,24 @@
       <div class="section text-center">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
-            <h2 class="title">Hey Creampuffs!</h2>
 
-            <h5 class="section-description">We are campaigning Shaftesbury TV for new Carmilla content with the same great cast that’s helped make the series what it is today. Through this campaign we are hoping to show Shafestbury that there is both, still an audience for new content, and that this fandom is still active and strong!</h5>
+            <h2 class="title"><img src="assets/img/moreiconsmall.gif" height="123" width="126" align="center" hspace="20">Hey Creampuffs!</h2>
 
+            <br>
+            <h5 class="section-description">We are campaigning Shaftesbury TV for new Carmilla content with the same great cast that’s helped make the series what it is today. Through this campaign, we are hoping to show Shaftesbury that there is both, still an audience for new content and that this fandom is still active and strong! </h5>
+
+            <br>
             <h4 class="info-title">Who We Are</h4>
 
             <h5 class="description">
-              We are active on twitter (and other social media platforms) using the <strong>#MoreCarmilla</strong> hashtag. As part of the campaign we will be hosting monthly rewatch parties, planning ways to engage Shaftesbury and show them our interest, and hosting contests and other ways to keep the fandom engaged and active.
+              We are active on Twitter (and other social media platforms) using the #MoreCarmilla hashtag. As part of the campaign, we actively find ways to engage Shaftesbury and show them our interest. We will be hosting monthly rewatch parties, various contests and other ways to keep the fandom engaged and active.
 
+              <br>
+              <br>
               <h4 class="info-title">How to Help</h4>
-              <h5 class="description">There are plenty of events currently going on and planned for the future, for articles covering the latest news please visit our community page on the <a href="http://carmillafans.com/category/news/more-carmilla/">CarmillaFans website</a> along with our social media links below.</h5>
+              <h5 class="description">There are plenty of events currently going on and planned for the future (see <a href="#calendar">calendar</a>). For articles covering the latest news please visit our community page on the <a href="http://carmillafans.com/category/news/more-carmilla/">CarmillaFans website</a> along with our social media links below.</h5>
 
+              <br>
               <h4 class="info-title">Join Us</h4>
               <h5 class="description">If you are interested in joining in on the campaign planning and getting all the inside scoop as it is happening, please join our Discord Server:</h5>
               <a href="https://t.co/tAl0vNUq22?amp=1" target="_blank" data-original-title="Follow us on Discord">
@@ -149,7 +155,9 @@
                     <i class="fab fa-discord fa-2x"></i></h4>
                 </button>
               </a>
-              <h5 class="description">For those who wish to follow us on social media, we are on almost every platform so make sure to check them out and give us a follow!</h5>
+
+              <br>
+              <h5 class="description">For those who wish to follow us on <strong>social media</strong>, we are on almost every platform so make sure to check them out and give us a follow!</h5>
               <div class="icon icon-info">
                 <a rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/MoreCarmilla" target="_blank" data-original-title="Follow us on Twitter">
                 <button class="btn btn-info btn-round">
@@ -178,6 +186,10 @@
                 <a href="">
                   <i class="fa btn-facebook"></i>
                 </a></h5>
+
+            <h4 class="info-title">Calendar</h4>
+
+            <h5 id="calendar" class="card-description">Below is a listing of all the <strong>#MoreCarmilla events</strong> currently ongoing. This calendar will be updated as new events are created, please continue to check back.</h5>
             <iframe src="https://calendar.google.com/calendar/embed?src=3qa712d07u3bcr1su73t8aqk48%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
           </div>
         </div>
