Updated tags for Natasha text, removed filler text for characters, updated minor changes to index and morecarmilla

--- a/silasethernet/bts/cast/natasha.html
+++ b/silasethernet/bts/cast/natasha.html
@@ -135,17 +135,17 @@
           </div>
         </div>
         <div class="description text-center">
-          <p>Natasha Negovanlis was born April 3, 1990, in Toronto, Canada, where she still resides today. Natasha has been formally trained in music, and studied voice performance at McGill University before pursuing a professional career in acting.</p>
-          <p>Natasha is an openly pansexual, Canadian Screen Award winning, actress who is best known for playing that wonderful broody lesbian vampire Carmilla Karnstein in the series “Carmilla.”  So far, she’s portrayed Carmilla in four seasons of episodes made for YouTube, along with a feature-length movie.  While she was starring in the webseries, she won the Audience Choice Award at the 2017 Canadian Screen Awards for her work on “Carmilla.”</p>
-          <p>Besides Carmilla, her most notable work includes the film “Almost Adults,” the film “Freelancers Anonymous,” and “CLAIREvoyant,” a webseries she co-created, wrote, produced, and starred in. She has also held guest roles on shows such as Slasher and Murdoch Mysteries.</p>
-          <p>Natasha is heavily involved in the LGBT community and is involved with many organizations which help empower LGBTQQIA2+ youth such as “The Get REAL Movement”. Additionally she has also launched a collaboration project with Butch & Sissy for a line of Vanlis™merchandise.</p>
+          <h5 class="description">Natasha Negovanlis was born April 3, 1990, in Toronto, Canada, where she still resides today. Natasha has been formally trained in music, and studied voice performance at McGill University before pursuing a professional career in acting.</h5>
+          <h5 class="description">Natasha is an openly pansexual, Canadian Screen Award winning, actress who is best known for playing that wonderful broody lesbian vampire Carmilla Karnstein in the series “Carmilla.”  So far, she’s portrayed Carmilla in four seasons of episodes made for YouTube, along with a feature-length movie.  While she was starring in the webseries, she won the Audience Choice Award at the 2017 Canadian Screen Awards for her work on “Carmilla.”</h5>
+          <h5 class="description">Besides Carmilla, her most notable work includes the film “Almost Adults,” the film “Freelancers Anonymous,” and “CLAIREvoyant,” a webseries she co-created, wrote, produced, and starred in. She has also held guest roles on shows such as Slasher and Murdoch Mysteries.</h5>
+          <h5 class="description">Natasha is heavily involved in the LGBT community and is involved with many organizations which help empower LGBTQQIA2+ youth such as “The Get REAL Movement”. Additionally she has also launched a collaboration project with Butch & Sissy for a line of Vanlis™merchandise.</h5>
 
           <h5 class="card-title">Fanmail Address:</h5>
             Phil Flagler<br>
             Agent - AMI Agency<br>
             464 King Street East<br>
             Toronto, ON M5A 1L7
-          </p>
+          </h5>
           <a href="https://twitter.com/natvanlis" class="btn btn-just-icon btn-link btn-twitter"><i class="fa fa-twitter"></i></a>
           <a href="https://www.instagram.com/natvanlis/" class="btn btn-just-icon btn-link btn-instagram"><i class="fa fa-instagram"></i></a>
           <a href="https://www.facebook.com/therealnatvanlis/" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
