--- a/silasethernet/index.html
+++ b/silasethernet/index.html
@@ -54,11 +54,14 @@
             Carmilla
           </a>
           <div class="dropdown-menu dropdown-with-icons">
+            <a href="about.html" class="dropdown-item">
+              <i class="material-icons">tv</i> About the Web Series
+            </a>
             <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
               <i class="material-icons">tv</i> Watch Carmilla
             </a>
-            <a href="./carmilla/episodeguides.html" class="dropdown-item">
-              <i class="material-icons">book</i> Episode Guides
+            <a href="./carmilla/episodeguide.html" class="dropdown-item">
+              <i class="material-icons">book</i> Episode Guide
             </a>
             <a href="./carmilla/characters.html" class="dropdown-item">
               <i class="material-icons">people</i> Characters
@@ -70,13 +73,15 @@
             Behind the Scenes
           </a>
           <div class="dropdown-menu dropdown-with-icons">
-            <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
-              <i class="material-icons">tv</i> Cast
-            </a>
-            <a href="comingsoon.html" class="dropdown-item">
+            <div class="btn-group dropright">
+              <a href="./bts/cast/cast.html" class="dropdown-item">
+                <i class="material-icons">tv</i> Cast
+              </a>
+            </div>
+            <a href="./bts/crew/crew.html" class="dropdown-item">
               <i class="material-icons">book</i> Crew
             </a>
-            <a href="comingsoon.html" class="dropdown-item">
+            <a href="https://www.youtube.com/user/VervegirlMagazine" class="dropdown-item">
               <i class="material-icons">people</i> KindaTV
             </a>
           </div>
@@ -89,13 +94,13 @@
             <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
               <i class="material-icons">tv</i> CarmillaFans.com
             </a>
-            <a href="comingsoon.html" class="dropdown-item">
-              <i class="material-icons">book</i> Fan Fiction
-            </a>
-            <a href="comingsoon.html" class="dropdown-item">
-              <i class="material-icons">people</i> Fan Art
-            </a>
-            <a href="comingsoon.html" class="dropdown-item">
+            <!--<a href="comingsoon.html" class="dropdown-item">-->
+            <!--<i class="material-icons">book</i> Fan Fiction-->
+            <!--</a>-->
+            <!--<a href="comingsoon.html" class="dropdown-item">-->
+            <!--<i class="material-icons">people</i> Fan Art-->
+            <!--</a>-->
+            <a href="../directory.html" class="dropdown-item">
               <i class="material-icons">people</i> Fandom Directory
             </a>
           </div>
