--- a/silasethernet/morecarmilla.html
+++ b/silasethernet/morecarmilla.html
@@ -55,11 +55,14 @@
             Carmilla
           </a>
           <div class="dropdown-menu dropdown-with-icons">
+            <a href="about.html" class="dropdown-item">
+              <i class="material-icons">tv</i> About the Web Series
+            </a>
             <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
               <i class="material-icons">tv</i> Watch Carmilla
             </a>
-            <a href="./carmilla/episodeguides.html" class="dropdown-item">
-              <i class="material-icons">book</i> Episode Guides
+            <a href="./carmilla/episodeguide.html" class="dropdown-item">
+              <i class="material-icons">book</i> Episode Guide
             </a>
             <a href="./carmilla/characters.html" class="dropdown-item">
               <i class="material-icons">people</i> Characters
@@ -71,13 +74,15 @@
             Behind the Scenes
           </a>
           <div class="dropdown-menu dropdown-with-icons">
-            <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
-              <i class="material-icons">tv</i> Cast
-            </a>
-            <a href="comingsoon.html" class="dropdown-item">
+            <div class="btn-group dropright">
+              <a href="./bts/cast/cast.html" class="dropdown-item">
+                <i class="material-icons">tv</i> Cast
+              </a>
+            </div>
+            <a href="./bts/crew/crew.html" class="dropdown-item">
               <i class="material-icons">book</i> Crew
             </a>
-            <a href="comingsoon.html" class="dropdown-item">
+            <a href="https://www.youtube.com/user/VervegirlMagazine" class="dropdown-item">
               <i class="material-icons">people</i> KindaTV
             </a>
           </div>
@@ -90,13 +95,13 @@
             <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
               <i class="material-icons">tv</i> CarmillaFans.com
             </a>
-            <a href="comingsoon.html" class="dropdown-item">
-              <i class="material-icons">book</i> Fan Fiction
-            </a>
-            <a href="comingsoon.html" class="dropdown-item">
-              <i class="material-icons">people</i> Fan Art
-            </a>
-            <a href="comingsoon.html" class="dropdown-item">
+            <!--<a href="comingsoon.html" class="dropdown-item">-->
+            <!--<i class="material-icons">book</i> Fan Fiction-->
+            <!--</a>-->
+            <!--<a href="comingsoon.html" class="dropdown-item">-->
+            <!--<i class="material-icons">people</i> Fan Art-->
+            <!--</a>-->
+            <a href="../directory.html" class="dropdown-item">
               <i class="material-icons">people</i> Fandom Directory
             </a>
           </div>
@@ -106,7 +111,7 @@
         <!--</li>-->
         <li class="nav-item">
           <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/SilasEthernet" target="_blank" data-original-title="Follow us on Twitter">
-            <i class="fab fa-twitter"></i>
+            <i class="fa fa-twitter"></i>
           </a>
         </li>
       </ul>
@@ -130,10 +135,10 @@
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
 
-            <h2 class="title"><img src="assets/img/moreiconsmall.gif" height="123" width="126" align="center" hspace="20">Hey Creampuffs!</h2>
+            <h2 class="title"><img src="assets/img/moreiconfull.gif" class="img-raised rounded-circle img-fluid" align="center" hspace="20">Hey Creampuffs!</h2>
 
             <br>
-            <h5 class="section-description">We are campaigning Shaftesbury TV for new Carmilla content with the same great cast that’s helped make the series what it is today. Through this campaign, we are hoping to show Shaftesbury that there is both, still an audience for new content and that this fandom is still active and strong! </h5>
+            <h5 class="description">We are campaigning Shaftesbury TV for new Carmilla content with the same great cast that’s helped make the series what it is today. Through this campaign, we are hoping to show Shaftesbury that there is both, still an audience for new content and that this fandom is still active and strong! </h5>
 
             <br>
             <h4 class="info-title">Who We Are</h4>
