fixed fan mail address

--- a/silasethernet/bts/cast/natasha.html
+++ b/silasethernet/bts/cast/natasha.html
@@ -140,7 +140,7 @@
           <h5 class="description">Besides Carmilla, her most notable work includes the film “Almost Adults,” the film “Freelancers Anonymous,” and “CLAIREvoyant,” a webseries she co-created, wrote, produced, and starred in. She has also held guest roles on shows such as Slasher and Murdoch Mysteries.</h5>
           <h5 class="description">Natasha is heavily involved in the LGBT community and is involved with many organizations which help empower LGBTQQIA2+ youth such as “The Get REAL Movement”. Additionally she has also launched a collaboration project with Butch & Sissy for a line of Vanlis™merchandise.</h5>
 
-          <h5 class="card-title">Fanmail Address:</h5>
+          <h5 class="card-title">Fanmail Address:
             Phil Flagler<br>
             Agent - AMI Agency<br>
             464 King Street East<br>
