Fixed navigation with updated links

--- a/silasethernet/bts/cast/natasha.html
+++ b/silasethernet/bts/cast/natasha.html
@@ -36,86 +36,86 @@
 
 <body class="profile-page sidebar-collapse">
 <nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg bg-dark" color-on-scroll="100" id="sectionsNav">
-  <div class="container">
-    <div class="navbar-translate">
-      <a class="navbar-brand" href="index.html">
-        Silas Ethernet </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="navbar-toggler-icon"></span>
-        <span class="navbar-toggler-icon"></span>
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <div class="container">
+        <div class="navbar-translate">
+            <a class="navbar-brand" href="../../index.html">
+                Silas Ethernet </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                <li class="dropdown nav-item">
+                    <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                        Carmilla
+                    </a>
+                    <div class="dropdown-menu dropdown-with-icons">
+                        <a href="../../about.html" class="dropdown-item">
+                            <i class="material-icons">tv</i> About the Web Series
+                        </a>
+                        <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
+                            <i class="material-icons">tv</i> Watch Carmilla
+                        </a>
+                        <a href="../carmilla/episodeguide.html" class="dropdown-item">
+                            <i class="material-icons">book</i> Episode Guide
+                        </a>
+                        <a href="../carmilla/characters.html" class="dropdown-item">
+                            <i class="material-icons">people</i> Characters
+                        </a>
+                    </div>
+                </li>
+                <li class="dropdown nav-item">
+                    <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                        Behind the Scenes
+                    </a>
+                    <div class="dropdown-menu dropdown-with-icons">
+                        <div class="btn-group dropright">
+                            <a href="../../bts/cast/cast.html" class="dropdown-item">
+                                <i class="material-icons">tv</i> Cast
+                            </a>
+                        </div>
+                        <a href="../../bts/crew/crew.html" class="dropdown-item">
+                            <i class="material-icons">book</i> Crew
+                        </a>
+                        <a href="https://www.youtube.com/user/VervegirlMagazine" class="dropdown-item">
+                            <i class="material-icons">people</i> KindaTV
+                        </a>
+                    </div>
+                </li>
+                <li class="dropdown nav-item">
+                    <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                        Fandom
+                    </a>
+                    <div class="dropdown-menu dropdown-with-icons">
+                        <!--<a href="comingsoon.html" class="dropdown-item">-->
+                        <!--<i class="material-icons">book</i> Fan Fiction-->
+                        <!--</a>-->
+                        <!--<a href="comingsoon.html" class="dropdown-item">-->
+                        <!--<i class="material-icons">people</i> Fan Art-->
+                        <!--</a>-->
+                        <a href="../../directory.html" class="dropdown-item">
+                            <i class="material-icons">people</i> Fandom Directory
+                        </a>
+                        <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
+                            <i class="material-icons">tv</i> CarmillaFans.com
+                        </a>
+                    </div>
+                </li>
+                <!--<li class="nav-item">-->
+                <!--<i class="material-icons">cloud_download</i> Download-->
+                <!--</li>-->
+                <li class="nav-item">
+                    <a href="../../morecarmilla.html" class="navbar-brand">
+                        #MoreCarmilla
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav ml-auto">
-        <li class="dropdown nav-item">
-          <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-            Carmilla
-          </a>
-          <div class="dropdown-menu dropdown-with-icons">
-            <a href="../../about.html" class="dropdown-item">
-              <i class="material-icons">tv</i> About the Web Series
-            </a>
-            <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
-              <i class="material-icons">tv</i> Watch Carmilla
-            </a>
-            <a href="../carmilla/episodeguide.html" class="dropdown-item">
-              <i class="material-icons">book</i> Episode Guide
-            </a>
-            <a href="../carmilla/characters.html" class="dropdown-item">
-              <i class="material-icons">people</i> Characters
-            </a>
-          </div>
-        </li>
-        <li class="dropdown nav-item">
-          <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-            Behind the Scenes
-          </a>
-          <div class="dropdown-menu dropdown-with-icons">
-            <div class="btn-group dropright">
-              <a href="cast.html" class="dropdown-item">
-                <i class="material-icons">tv</i> Cast
-              </a>
-            </div>
-            <a href="../crew/crew.html" class="dropdown-item">
-              <i class="material-icons">book</i> Crew
-            </a>
-            <a href="https://www.youtube.com/user/VervegirlMagazine" class="dropdown-item">
-              <i class="material-icons">people</i> KindaTV
-            </a>
-          </div>
-        </li>
-        <li class="dropdown nav-item">
-          <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-            Fandom
-          </a>
-          <div class="dropdown-menu dropdown-with-icons">
-            <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
-              <i class="material-icons">tv</i> CarmillaFans.com
-            </a>
-            <!--<a href="comingsoon.html" class="dropdown-item">-->
-            <!--<i class="material-icons">book</i> Fan Fiction-->
-            <!--</a>-->
-            <!--<a href="comingsoon.html" class="dropdown-item">-->
-            <!--<i class="material-icons">people</i> Fan Art-->
-            <!--</a>-->
-            <a href="../directory.html" class="dropdown-item">
-              <i class="material-icons">people</i> Fandom Directory
-            </a>
-          </div>
-        </li>
-        <!--<li class="nav-item">-->
-        <!--<i class="material-icons">cloud_download</i> Download-->
-        <!--</li>-->
-        <li class="nav-item">
-          <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/SilasEthernet" target="_blank" data-original-title="Follow us on Twitter">
-            <i class="fa fa-twitter"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
 </nav>
   <div class="page-header header-filter" data-parallax="true" style="background-image: url('../../assets/img/allcast2.jpg');"></div>
   <div class="main main-raised">
@@ -140,11 +140,12 @@
           <h5 class="description">Besides Carmilla, her most notable work includes the film “Almost Adults,” the film “Freelancers Anonymous,” and “CLAIREvoyant,” a webseries she co-created, wrote, produced, and starred in. She has also held guest roles on shows such as Slasher and Murdoch Mysteries.</h5>
           <h5 class="description">Natasha is heavily involved in the LGBT community and is involved with many organizations which help empower LGBTQQIA2+ youth such as “The Get REAL Movement”. Additionally she has also launched a collaboration project with Butch & Sissy for a line of Vanlis™merchandise.</h5>
 
-          <h5 class="card-title">Fanmail Address:
+          <h5 class="card-title">Fanmail Address:</h5>
+          <h5 class="description">
             Phil Flagler<br>
             Agent - AMI Agency<br>
             464 King Street East<br>
-            Toronto, ON M5A 1L7
+            Toronto, ON M5A 1L7<br>
           </h5>
           <a href="https://twitter.com/natvanlis" class="btn btn-just-icon btn-link btn-twitter"><i class="fa fa-twitter"></i></a>
           <a href="https://www.instagram.com/natvanlis/" class="btn btn-just-icon btn-link btn-instagram"><i class="fa fa-instagram"></i></a>
