--- a/silasethernet/bts/crew/crew.html
+++ b/silasethernet/bts/crew/crew.html
@@ -39,7 +39,7 @@
 <nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg bg-dark" color-on-scroll="100" id="sectionsNav">
   <div class="container">
     <div class="navbar-translate">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="../../index.html">
         Silas Ethernet </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
@@ -62,88 +62,7 @@
               <i class="material-icons">tv</i> Watch Carmilla
             </a>
             <a href="../carmilla/episodeguide.html" class="dropdown-item">
-              <i class="material-icons">book</i> Episode Guide<nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg bg-dark" color-on-scroll="100" id="sectionsNav">
-              <div class="container">
-                <div class="navbar-translate">
-                  <a class="navbar-brand" href="index.html">
-                    Silas Ethernet </a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="navbar-toggler-icon"></span>
-                    <span class="navbar-toggler-icon"></span>
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                </div>
-                <div class="collapse navbar-collapse">
-                  <ul class="navbar-nav ml-auto">
-                    <li class="dropdown nav-item">
-                      <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                        Carmilla
-                      </a>
-                      <div class="dropdown-menu dropdown-with-icons">
-                        <a href="../../about.html" class="dropdown-item">
-                          <i class="material-icons">tv</i> About the Web Series
-                        </a>
-                        <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
-                          <i class="material-icons">tv</i> Watch Carmilla
-                        </a>
-                        <a href="../carmilla/episodeguides.html" class="dropdown-item">
-                          <i class="material-icons">book</i> Episode Guides
-                        </a>
-                        <a href="../carmilla/characters.html" class="dropdown-item">
-                          <i class="material-icons">people</i> Characters
-                        </a>
-                      </div>
-                    </li>
-                    <li class="dropdown nav-item">
-                      <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                        Behind the Scenes
-                      </a>
-                      <div class="dropdown-menu dropdown-with-icons">
-                        <div class="btn-group dropright">
-                          <a href="../../bts/cast/cast.html" class="dropdown-item">
-                            <i class="material-icons">tv</i> Cast
-                          </a>
-                        </div>
-                        <a href="../../bts/crew/crew.html" class="dropdown-item">
-                          <i class="material-icons">book</i> Crew
-                        </a>
-                        <a href="https://www.youtube.com/user/VervegirlMagazine" class="dropdown-item">
-                          <i class="material-icons">people</i> KindaTV
-                        </a>
-                      </div>
-                    </li>
-                    <li class="dropdown nav-item">
-                      <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                        Fandom
-                      </a>
-                      <div class="dropdown-menu dropdown-with-icons">
-                        <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
-                          <i class="material-icons">tv</i> CarmillaFans.com
-                        </a>
-                        <!--<a href="comingsoon.html" class="dropdown-item">-->
-                        <!--<i class="material-icons">book</i> Fan Fiction-->
-                        <!--</a>-->
-                        <!--<a href="comingsoon.html" class="dropdown-item">-->
-                        <!--<i class="material-icons">people</i> Fan Art-->
-                        <!--</a>-->
-                        <a href="../../directory.html" class="dropdown-item">
-                          <i class="material-icons">people</i> Fandom Directory
-                        </a>
-                      </div>
-                    </li>
-                    <!--<li class="nav-item">-->
-                    <!--<i class="material-icons">cloud_download</i> Download-->
-                    <!--</li>-->
-                    <li class="nav-item">
-                      <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/SilasEthernet" target="_blank" data-original-title="Follow us on Twitter">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
+              <i class="material-icons">book</i> Episode Guide
             </a>
             <a href="../carmilla/characters.html" class="dropdown-item">
               <i class="material-icons">people</i> Characters
@@ -173,9 +92,6 @@
             Fandom
           </a>
           <div class="dropdown-menu dropdown-with-icons">
-            <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
-              <i class="material-icons">tv</i> CarmillaFans.com
-            </a>
             <!--<a href="comingsoon.html" class="dropdown-item">-->
             <!--<i class="material-icons">book</i> Fan Fiction-->
             <!--</a>-->
@@ -185,14 +101,17 @@
             <a href="../../directory.html" class="dropdown-item">
               <i class="material-icons">people</i> Fandom Directory
             </a>
+            <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
+              <i class="material-icons">tv</i> CarmillaFans.com
+            </a>
           </div>
         </li>
         <!--<li class="nav-item">-->
         <!--<i class="material-icons">cloud_download</i> Download-->
         <!--</li>-->
         <li class="nav-item">
-          <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/SilasEthernet" target="_blank" data-original-title="Follow us on Twitter">
-            <i class="fa fa-twitter"></i>
+          <a href="../../morecarmilla.html" class="navbar-brand">
+            #MoreCarmilla
           </a>
         </li>
       </ul>
