--- a/silasethernet/index.html
+++ b/silasethernet/index.html
@@ -91,9 +91,6 @@
             Fandom
           </a>
           <div class="dropdown-menu dropdown-with-icons">
-            <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
-              <i class="material-icons">tv</i> CarmillaFans.com
-            </a>
             <!--<a href="comingsoon.html" class="dropdown-item">-->
             <!--<i class="material-icons">book</i> Fan Fiction-->
             <!--</a>-->
@@ -103,14 +100,17 @@
             <a href="../directory.html" class="dropdown-item">
               <i class="material-icons">people</i> Fandom Directory
             </a>
+            <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
+              <i class="material-icons">tv</i> CarmillaFans.com
+            </a>
           </div>
         </li>
         <!--<li class="nav-item">-->
         <!--<i class="material-icons">cloud_download</i> Download-->
         <!--</li>-->
         <li class="nav-item">
-          <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/SilasEthernet" target="_blank" data-original-title="Follow us on Twitter">
-            <i class="fa fa-twitter"></i>
+          <a href="morecarmilla.html" class="navbar-brand">
+            #MoreCarmilla
           </a>
         </li>
       </ul>
