--- a/silasethernet/carmilla/characters.html
+++ b/silasethernet/carmilla/characters.html
@@ -39,7 +39,7 @@
 <nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg bg-dark" color-on-scroll="100" id="sectionsNav">
   <div class="container">
     <div class="navbar-translate">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="../index.html">
         Silas Ethernet </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
@@ -92,9 +92,6 @@
             Fandom
           </a>
           <div class="dropdown-menu dropdown-with-icons">
-            <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
-              <i class="material-icons">tv</i> CarmillaFans.com
-            </a>
             <!--<a href="comingsoon.html" class="dropdown-item">-->
             <!--<i class="material-icons">book</i> Fan Fiction-->
             <!--</a>-->
@@ -104,14 +101,17 @@
             <a href="../directory.html" class="dropdown-item">
               <i class="material-icons">people</i> Fandom Directory
             </a>
+            <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
+              <i class="material-icons">tv</i> CarmillaFans.com
+            </a>
           </div>
         </li>
         <!--<li class="nav-item">-->
         <!--<i class="material-icons">cloud_download</i> Download-->
         <!--</li>-->
         <li class="nav-item">
-          <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/SilasEthernet" target="_blank" data-original-title="Follow us on Twitter">
-            <i class="fa fa-twitter"></i>
+          <a href="../morecarmilla.html" class="navbar-brand">
+            #MoreCarmilla
           </a>
         </li>
       </ul>
@@ -134,8 +134,8 @@
       <div class="section text-center">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
-            Stuff goes here
-          </div>
+            <h4 class="info-title">Oops!!! This page isn't up yet. Check back again later... </h4>
+            <img src="../assets/img/techdiff2.jpg" height="450" width="800"/></div>
         </div>
       </div>
       </div>
