--- a/silasethernet/comingsoon.html
+++ b/silasethernet/comingsoon.html
@@ -18,8 +18,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Silas Ethernet by Silas Board
@@ -29,16 +29,17 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
-  <link href="assets/css/material-kit.css?v=2.0.6" rel="stylesheet" />
+  <link href="./assets/css/material-kit.css?v=2.0.6" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="assets/demo/demo.css" rel="stylesheet" />
+  <link href="./assets/demo/demo.css" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/3ba22e2157.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="landing-page sidebar-collapse">
 <nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg bg-dark" color-on-scroll="100" id="sectionsNav">
   <div class="container">
     <div class="navbar-translate">
-      <a class="navbar-brand" href="https://demos.creative-tim.com/material-kit/index.html">
+      <a class="navbar-brand" href="index.html">
         Silas Ethernet </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
@@ -54,11 +55,14 @@
             Carmilla
           </a>
           <div class="dropdown-menu dropdown-with-icons">
+            <a href="about.html" class="dropdown-item">
+              <i class="material-icons">tv</i> About the Web Series
+            </a>
             <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
               <i class="material-icons">tv</i> Watch Carmilla
             </a>
-            <a href="./carmilla/episodeguides.html" class="dropdown-item">
-              <i class="material-icons">book</i> Episode Guides
+            <a href="./carmilla/episodeguide.html" class="dropdown-item">
+              <i class="material-icons">book</i> Episode Guide
             </a>
             <a href="./carmilla/characters.html" class="dropdown-item">
               <i class="material-icons">people</i> Characters
@@ -70,13 +74,15 @@
             Behind the Scenes
           </a>
           <div class="dropdown-menu dropdown-with-icons">
-            <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
-              <i class="material-icons">tv</i> Cast
-            </a>
-            <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
+            <div class="btn-group dropright">
+              <a href="./bts/cast/cast.html" class="dropdown-item">
+                <i class="material-icons">tv</i> Cast
+              </a>
+            </div>
+            <a href="./bts/crew/crew.html" class="dropdown-item">
               <i class="material-icons">book</i> Crew
             </a>
-            <a href="https://www.youtube.com/playlist?list=PLbvYWjKFvS5qc5wEPzwPCmCVhpxXvkHus" class="dropdown-item">
+            <a href="https://www.youtube.com/user/VervegirlMagazine" class="dropdown-item">
               <i class="material-icons">people</i> KindaTV
             </a>
           </div>
@@ -86,17 +92,17 @@
             Fandom
           </a>
           <div class="dropdown-menu dropdown-with-icons">
+            <!--<a href="comingsoon.html" class="dropdown-item">-->
+            <!--<i class="material-icons">book</i> Fan Fiction-->
+            <!--</a>-->
+            <!--<a href="comingsoon.html" class="dropdown-item">-->
+            <!--<i class="material-icons">people</i> Fan Art-->
+            <!--</a>-->
+            <a href="../directory.html" class="dropdown-item">
+              <i class="material-icons">people</i> Fandom Directory
+            </a>
             <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
               <i class="material-icons">tv</i> CarmillaFans.com
-            </a>
-            <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
-              <i class="material-icons">book</i> Fan Fiction
-            </a>
-            <a href="https://www.youtube.com/playlist?list=PLbvYWjKFvS5qc5wEPzwPCmCVhpxXvkHus" class="dropdown-item">
-              <i class="material-icons">people</i> Fan Art
-            </a>
-            <a href="https://www.youtube.com/playlist?list=PLbvYWjKFvS5qc5wEPzwPCmCVhpxXvkHus" class="dropdown-item">
-              <i class="material-icons">people</i> Fandom Directory
             </a>
           </div>
         </li>
@@ -104,32 +110,21 @@
         <!--<i class="material-icons">cloud_download</i> Download-->
         <!--</li>-->
         <li class="nav-item">
-          <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/SilasEthernet" target="_blank" data-original-title="Follow us on Twitter">
-            <i class="fa fa-twitter"></i>
+          <a href="morecarmilla.html" class="navbar-brand">
+            #MoreCarmilla
           </a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-  <div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/altcarmilla.png')">
+  <div class="page-header header-filter" data-parallax="true" style="background-image: url('./assets/img/university.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto">
+
+          <h1 class="title">So... Yeah... Oops...</h1>
           <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <h1 class="title">Silas Ethernet</h1>
-          <h4>Your number one source for all things Carmilla, the web series.</h4>
-          <h4>New to Carmilla? Start here...</h4>
-          <br>
-          <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" target="_blank" class="btn btn-danger btn-raised btn-lg">
-            <i class="fa fa-play"></i> Watch Carmilla
-          </a>
         </div>
       </div>
     </div>
@@ -139,18 +134,30 @@
       <div class="section text-center">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
-            <h2 class="title">Coming soon</h2>
-            <h5 class="description">We're hard at work getting these pages completed. Please come back soon...</h5>
-            <img src="assets/img/techdiff2.jpg" >
-          </div>
+            <h4 class="info-title">The Silas University Library couldn't find this page... Check back again later... </h4>
+            <img src="./assets/img/techdiff2.jpg" height="450" width="800"/></div>
         </div>
+      </div>
+      </div>
+    </div>
+  </div>
   <footer class="footer footer-default">
     <div class="container">
       <nav class="float-left">
         <ul>
           <li>
-            <a href="comingsoon.html">
+            <a href="https://www.creative-tim.com">
+              Creative Tim
+            </a>
+          </li>
+          <li>
+            <a href="https://creative-tim.com/presentation">
               About Us
+            </a>
+          </li>
+          <li>
+            <a href="http://blog.creative-tim.com">
+              Blog
             </a>
           </li>
           <li>
@@ -164,24 +171,24 @@
         &copy;
         <script>
           document.write(new Date().getFullYear())
-        </script>, Silas Board. Layout made with <i class="material-icons">favorite</i> by
+        </script>, made with <i class="material-icons">favorite</i> by
         <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
       </div>
     </div>
   </footer>
   <!--   Core JS Files   -->
-  <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <script src="assets/js/plugins/moment.min.js"></script>
+  <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="./assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/moment.min.js"></script>
   <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-  <script src="assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
   <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-  <script src="assets/js/material-kit.js?v=2.0.6" type="text/javascript"></script>
+  <script src="./assets/js/material-kit.js?v=2.0.6" type="text/javascript"></script>
 </body>
 
 </html>
