--- a/silasethernet/bts/cast/natasha.html
+++ b/silasethernet/bts/cast/natasha.html
@@ -147,6 +147,8 @@
             464 King Street East<br>
             Toronto, ON M5A 1L7<br>
           </h5>
+            <br><br>
+            <h5 class="card-title">Social Media & Other Links:</h5>
           <a href="https://twitter.com/natvanlis" class="btn btn-just-icon btn-link btn-twitter"><i class="fa fa-twitter"></i></a>
           <a href="https://www.instagram.com/natvanlis/" class="btn btn-just-icon btn-link btn-instagram"><i class="fa fa-instagram"></i></a>
           <a href="https://www.facebook.com/therealnatvanlis/" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -154,69 +156,8 @@
           <a href="https://www.pinterest.com/natvanlis/" class="btn btn-just-icon btn-link btn-pinterest"><i class="fa fa-pinterest"></i></a>
           <a href="https://www.natashanegovanlis.com" class="btn btn-just-icon btn-link btn-external-link"><i class="fa fa-external-link"></i></a>
           <a href="https://www.butchandsissy.co/product-category/brands/vanlis/" class="btn btn-just-icon btn-link btn-shopping-bag"><i class="fa fa-shopping-bag"></i></a>
-        </div>
-        <div class="row">
-          <div class="col-md-6 ml-auto mr-auto">
-            <div class="profile-tabs">
-              <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#studio" role="tab" data-toggle="tab">
-                    <i class="material-icons">camera</i> Studio
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#works" role="tab" data-toggle="tab">
-                    <i class="material-icons">palette</i> Work
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
-                    <i class="material-icons">favorite</i> Favorite
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="tab-content tab-space">
-          <div class="tab-pane active text-center gallery" id="studio">
-            <div class="row">
-              <div class="col-md-3 ml-auto">
-                <img src="../../assets/img/natasha/getrealnat.png" class="rounded">
-                <img src="../../assets/img/natasha/leathernat.png" class="rounded">
-              </div>
-              <div class="col-md-3 mr-auto">
-                <img src="../../assets/img/natasha/yeehawnat.jpg" class="rounded">
-                <img src="../../assets/img/natasha/seeingsisters.png" class="rounded">
-              </div>
-            </div>
-          </div>
-          <div class="tab-pane text-center gallery" id="works">
-            <div class="row">
-              <div class="col-md-3 ml-auto">
-                <img src="../../assets/img/examples/olu-eletu.jpg" class="rounded">
-                <img src="../../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
-                <img src="../../assets/img/examples/cynthia-del-rio.jpg" class="rounded">
-              </div>
-              <div class="col-md-3 mr-auto">
-                <img src="../../assets/img/examples/mariya-georgieva.jpg" class="rounded">
-                <img src="../../assets/img/examples/clem-onojegaw.jpg" class="rounded">
-              </div>
-            </div>
-          </div>
-          <div class="tab-pane text-center gallery" id="favorite">
-            <div class="row">
-              <div class="col-md-3 ml-auto">
-                <img src="../../assets/img/examples/mariya-georgieva.jpg" class="rounded">
-                <img src="../../assets/img/examples/studio-3.jpg" class="rounded">
-              </div>
-              <div class="col-md-3 mr-auto">
-                <img src="../../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
-                <img src="../../assets/img/examples/olu-eletu.jpg" class="rounded">
-                <img src="../../assets/img/examples/studio-1.jpg" class="rounded">
-              </div>
-            </div>
-          </div>
+          <a href="https://natvanlis.bandcamp.com/" class="btn btn-just-icon btn-link btn-music"><i class="fa fa-music"></i></a>
+        <p><br><br></p>
         </div>
       </div>
     </div>
