--- a/silasethernet/morecarmilla.html
+++ b/silasethernet/morecarmilla.html
@@ -98,7 +98,7 @@
             <!--<a href="comingsoon.html" class="dropdown-item">-->
             <!--<i class="material-icons">people</i> Fan Art-->
             <!--</a>-->
-            <a href="../directory.html" class="dropdown-item">
+            <a href="directory.html" class="dropdown-item">
               <i class="material-icons">people</i> Fandom Directory
             </a>
             <a href="http://www.carmillafans.com" class="dropdown-item" target="_blank">
